--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -4,7 +4,7 @@
 	<caption>Conference List</caption>
 	<thead>
 	  <tr>
-	    <th width="20pt" class="sorttable_nosort">
+	    <th width="20pt" class="sorttable_nosort leftmost">
 	    <th class="sorttable_nosort">Acronym
 	    <th class="sorttable_nosort">Full Name
 	    <th width="105pt" title="click to sort!">Abstract
